Added folders for every project

--- a/Zenith_API.Implementation/Zenith_API.Implementation.csproj
+++ b/Zenith_API.Implementation/Zenith_API.Implementation.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+    <Folder Include="Logging\" />
+    <Folder Include="Validators\" />
+    <Folder Include="UseCases\" />
+  </ItemGroup>
+
 </Project>
