--- a/Zenith_API.Application/Zenith_API.Application.csproj
+++ b/Zenith_API.Application/Zenith_API.Application.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="UseCases\" />
+  </ItemGroup>
+
 </Project>
