--- a/Zenith_API.API/Zenith_API.API.csproj
+++ b/Zenith_API.API/Zenith_API.API.csproj
@@ -6,14 +6,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net" Version="0.1.0" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="DTO\" />
-    <Folder Include="Core\" />
     <Folder Include="Validation\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Zenith_API.Application\Zenith_API.Application.csproj" />
+    <ProjectReference Include="..\Zenith_API.Implementation\Zenith_API.Implementation.csproj" />
   </ItemGroup>
 
 </Project>
