--- a/Zenith_API.Implementation/Zenith_API.Implementation.csproj
+++ b/Zenith_API.Implementation/Zenith_API.Implementation.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +10,16 @@
     <Folder Include="Logging\" />
     <Folder Include="Validators\" />
     <Folder Include="UseCases\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net" Version="0.1.0" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Zenith_API.Application\Zenith_API.Application.csproj" />
   </ItemGroup>
 
 </Project>
