Added project references

--- a/Zenith_API.API/Zenith_API.API.csproj
+++ b/Zenith_API.API/Zenith_API.API.csproj
@@ -21,6 +21,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Zenith_API.Application\Zenith_API.Application.csproj" />
+    <ProjectReference Include="..\Zenith_API.DataAccess\Zenith_API.DataAccess.csproj" />
+    <ProjectReference Include="..\Zenith_API.Domain\Zenith_API.Domain.csproj" />
     <ProjectReference Include="..\Zenith_API.Implementation\Zenith_API.Implementation.csproj" />
   </ItemGroup>
 
