--- a/Zenith_API.Application/Zenith_API.Application.csproj
+++ b/Zenith_API.Application/Zenith_API.Application.csproj
@@ -12,4 +12,8 @@
     <Folder Include="UseCases\Queries\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Zenith_API.Domain\Zenith_API.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
