Added container extensions

--- a/Zenith_API.API/appsettings.Development.json
+++ b/Zenith_API.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionString": "Data Source=DESKTOP-CG6HMPT\\SQLEXPRESS;Initial Catalog=Zenith;TrustServerCertificate=true;Integrated security = true;",
+  "Jwt": {
+    "SecretKey": "d7tyh382kfh5jrue3ihgnmsxc3jwkl2er",
+    "Issuer": "Nikola",
+    "Seconds": 600
   }
 }
