--- a/Zenith_API.Implementation/Zenith_API.Implementation.csproj
+++ b/Zenith_API.Implementation/Zenith_API.Implementation.csproj
@@ -7,13 +7,13 @@
 
   <ItemGroup>
     <Folder Include="Exceptions\" />
-    <Folder Include="Logging\" />
     <Folder Include="Validators\" />
     <Folder Include="UseCases\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net" Version="0.1.0" />
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
