--- a/Zenith_API.Implementation/Zenith_API.Implementation.csproj
+++ b/Zenith_API.Implementation/Zenith_API.Implementation.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Folder Include="Exceptions\" />
+    <Folder Include="UseCases\Commands\" />
     <Folder Include="Validators\" />
   </ItemGroup>
 
