Finished getting genres

--- a/Zenith_API.API/Properties/launchSettings.json
+++ b/Zenith_API.API/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     "Zenith_API.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      //"launchBrowser": true,
+      //"launchUrl": "swagger",
       "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
