--- a/Zenith_API.API/appsettings.Development.json
+++ b/Zenith_API.API/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": "Data Source=DESKTOP-RJ8270A\\SQLEXPRESS;Initial Catalog=Zenith;TrustServerCertificate=true;Integrated security = true;",
+  "ConnectionString": "Data Source=DESKTOP-CG6HMPT\\SQLEXPRESS;Initial Catalog=Zenith;TrustServerCertificate=true;Integrated security = true;",
   "Jwt": {
     "SecretKey": "d7tyh382kfh5jrue3ihgnmsxc3jwkl2er",
     "Issuer": "Nikola",
